methods.returning.MethodsReturning.scala.error
Erreur de compilation :
MethodsReturning:1: error: not found: value vuBiscuit
def haveBaggle():Boolean = {var vuBiscuit()=false;for (k<-1 to 6) {if (estSurBiscuit()) {vuBiscuit()=true};for (i<- 1 to 6) {recule()};avance()
                                ^MethodsReturning:1: error: not found: value vuBiscuit
def haveBaggle():Boolean = {var vuBiscuit()=false;for (k<-1 to 6) {if (estSurBiscuit()) {vuBiscuit()=true};for (i<- 1 to 6) {recule()};avance()
                                                                                         ^MethodsReturning:2: error: not found: value vuBiscuit
                                                                  };if (vuBiscuit()==true) {return true};else {return false}} 
                                                                        ^