methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {var vuBiscuit()=false;for (k<-1 to 6) {if (estSurBiscuit()) {vuBiscuit()=true};for (i<- 1 to 6) {recule()};avance()
                                                                  };if (vuBiscuit()==true) {return true};else {return false}}